[tool.poetry]
name = "aligned"
version = "0.0.79"
description = "A data managment and lineage tool for ML applications."
authors = ["Mats E. Mollestad <mats@mollestad.no>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/MatsMoll/aligned"
repository = "https://github.com/MatsMoll/aligned"
keywords = [
    'python',
    'typed',
    'ml',
    'prediction',
    'feature',
    'store',
    'feature-store',
    'feast',
    'tecton',
    'dbt',
    'data',
    'lineage'
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.10',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
packages = [
    { include = "aligned" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
click = "^8.1.3"
pandas = "^2.0.0"
fastapi = { version = "^0.100.0", optional = true }
uvicorn = { version = "^0.17.6", optional = true }
redis = { version = "^4.3.1", optional = true }
mashumaro = "^3.0.1"
dill = "^0.3.4"
aioaws = { version = "^0.12", optional = true }
Jinja2 = "^3.1.2"
nest-asyncio = "^1.5.5"
pydantic = "^2.0.0"
prometheus_client = "^0.16.0"
asgi-correlation-id = { version = "^3.0.0", optional = true }
pandera = { version = "^0.17.0", optional = true}
httpx = "^0.23.0"
polars = { version = "^0.20.0", extras = ["pyarrow"] }
pillow = { version = "^9.4.0", optional = true }
prometheus-fastapi-instrumentator = { version="^5.9.1", optional = true }
# gensim = { version = "4.3.0", optional = true }
# openai = { version = "^0.27.2", optional = true }
# sentence-transformers = { version = "^2.2.2", optional = true }
kafka-python = { version= "^2.0.2", optional = true }
connectorx = { version = "^0.3.2", optional = true }
asyncpg = { version = "^0.29.0", optional = true }

[tool.poetry.extras]
aws = ["aioaws", "connectorx"]
psql = ["connectorx", "asyncpg"]
redis = ["redis"]
server = ["asgi-correlation-id", "fastapi", "uvicorn", "prometheus-fastapi-instrumentator"]
pandera = ["pandera"]
image = ["pillow"]
kafka = ["kafka-python"]
# text = ["gensim", "openai", "sentence-transformers"]

[tool.poetry.group.dev.dependencies]
types-redis = "^4.2.6"
pytest-mock = "^3.8.1"
freezegun = "^1.2.2"
pytest-asyncio = "^0.20.1"
fakeredis = "^2.10.0"
sqlalchemy = "^2.0.19"
printf-log-formatter = "^0.3.0"
isort = "^5.12.0"
black = "^23.7.0"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aligned = 'aligned.cli:cli'

[tool.black]
line-length = 110
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 110
